Fjerner noen av bgregel klassene. Mangler grunnbeløp som først må fik… (#5436)
Fjerner noen av bgregel klassene. Mangler grunnbeløp som først må fikses i kalkulus